<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.design.widget.AppBarLayout
        android:id="@+id/appbar2"
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:backgroundTint="#FFFFFF">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent">
    <TextView
    android:textColor="#000000"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/menu_title"
    android:textSize="20dp"/>
            <EditText
            android:textColor="#000000"
            android:layout_gravity="end"
            android:gravity="center"
            android:id="@+id/editTxtPrecioEstimado"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="$0.00"
            android:enabled="false"
            android:focusable="false"
            android:inputType="numberDecimal" />


            <TextView
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="1dp"
                android:text="@string/menu_importe"/>
        </android.support.v7.widget.Toolbar>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/enviarPedidoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_enviarPedido"
            android:backgroundTint="@color/colorFondo"
            />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_cantidadPedidos"
            />

        <EditText
            android:id="@+id/txtCantidadElementos"
            android:textColor="#000000"
            android:layout_gravity="end"
            android:gravity="right"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:enabled="false"
            android:inputType="none"
            android:focusable="false"/>
    </LinearLayout>
</LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SlidingPaneLayout
        android:background="@drawable/fondobuffet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <include
                android:id="@+id/appbar"
                layout="@layout/toolbar" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </android.support.v4.widget.SlidingPaneLayout>
</android.support.design.widget.CoordinatorLayout>