<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_hola"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FF84A595">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/title"
            android:layout_gravity="center"
            android:textColor="#000000" />

        <TextView
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_title"
            android:id="@+id/text1"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true" />
        <TextView
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_subtitle"
            android:id="@+id/text2"
            android:layout_marginTop="5dp" />

        <!--android:layout_width="match_parent"
            poner esto en el linear para que ocupe toda la pantalla
        -->
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent" android:layout_height="match_parent" android:stretchColumns="1">

            <TableRow>

                <TextView android:textColor="@color/colorLabel" android:text="Nombre" android:layout_width="wrap_content" android:layout_height="wrap_content"  />
                <EditText android:hint="Leandro" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="6dp" android:id="@+id/txtNombre" />

            </TableRow>

            <TableRow>

                <TextView android:textColor="@color/colorLabel" android:text="Apellido" android:layout_width="wrap_content" android:layout_height="wrap_content" />

                <EditText android:hint="Baldassarre" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="6dp" android:id="@+id/txtApellido" />

            </TableRow>

            <TableRow>

                <TextView android:textColor="@color/colorLabel" android:text="DNI" android:layout_width="wrap_content" android:layout_height="wrap_content" />

                <EditText android:hint="37180775" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="6dp" android:id="@+id/txtDni" />

            </TableRow>
            <TableRow>

                <TextView android:textColor="@color/colorLabel" android:text="Email" android:layout_width="wrap_content" android:layout_height="wrap_content" />

                <EditText android:hint="lea_eldoc@hotmail.com" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="6dp" android:id="@+id/txtEmail" />

            </TableRow>

            <TableRow>

                <TextView android:textColor="@color/colorLabel" android:text="Clave" android:layout_width="wrap_content" android:layout_height="wrap_content" />

                <EditText android:hint="Contraseña" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="6dp" android:id="@+id/txtClave1"/>

            </TableRow>

            <TableRow>
                <TextView android:textColor="@color/colorLabel" android:text="Reingrese" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <EditText android:hint="Repita contraseña" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="6dp" android:id="@+id/txtReClave2"/>
            </TableRow>

        </TableLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrar"
            android:text="Registrarse"
            android:layout_alignParentBottom="true" />
    </LinearLayout>
</RelativeLayout>